kubernetes/staccato/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: staccato
  name: staccato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staccato
  template:
    metadata:
      labels:
        app: staccato
    spec:
      containers:
        - image: tarbadev/staccato:0.1.0
          name: staccato
          ports:
            - containerPort: 4000
              protocol: TCP
          volumeMounts:
            - name: drive-config
              mountPath: "/usr/src/app/config/drive-credentials.json"
              subPath: "drive-credentials.json"
              readOnly: true
      volumes:
        - name: drive-config
          secret:
            secretName: staccato-drive-config
