kubernetes/staccato/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: staccato-service
  name: staccato-service
spec:
  ports:
    - name: http
      port: 4000
      targetPort: 4000
      nodePort: 32100
      protocol: TCP
  selector:
    app: staccato
  type: NodePort
