kubernetes/staccato/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: staccato-ingress
spec:
  rules:
    - host: "staccato.tarbahome.me"
      http:
        paths:
          - backend:
              serviceName: staccato-service
              servicePort: http
